<resources>
    <string name="app_name">AirA01a</string>
    <string name="sdk_version">SDK VERSION :</string>
    <string name="action_info">info</string>
    <string name="action_refreash">refreash</string>
    <string name="action_download">download</string>
    <string name="action_download_movie">download</string>
    <string name="action_download_original_movie">Original Size</string>
    <string name="action_download_original_size">Original Size</string>
    <string name="action_download_2048x1536">2048 x 1536</string>
    <string name="action_download_1920x1440">1920 x 1440</string>
    <string name="action_download_1600x1200">1600 x 1200</string>
    <string name="action_download_1024x768">1024 x 768</string>
    <string name="pref_cat_camera">CAMERA</string>
    <string name="pref_cat_info">INFORMATION</string>
    <string name="pref_cat_feature">FEATURES</string>
    <string name="pref_live_view_quality">Live View Quality</string>
    <string name="pref_touch_shutter">Touch Shutter</string>
    <string name="pref_show_preview">Show Preview</string>
    <string name="pref_shooting_velocity">Continuous Shooting Velocity</string>
    <string name="pref_image_size">Image Size</string>
    <string name="pref_compressibility_ratio">Compressibility Ratio</string>
    <string name="pref_take_raw">RAW</string>
    <string name="pref_power_off">Power Off</string>
    <string name="pref_camera_sound_volume">Sound Volume Level</string>
    <string name="pref_full_time_af">Full Time AF</string>
    <string name="pref_af_face_scan">Face Scan AF</string>
    <string name="pref_lens_status">Lens Status</string>
    <string name="pref_media_status">Media Status</string>
    <string name="pref_focal_length">Focal length</string>
    <string name="pref_camera_version">Camera Version</string>
    <string name="pref_camerakit_version">CameraKit Version</string>
    <string name="pref_art_filter">Art Filter Settings</string>
    <string name="pref_picture_mode">Color Tone Settings</string>
    <string name="pref_recently_art_filter">Art Filter Selection</string>
    <string name="pref_wb_denkyu_colored_leaving">WB AUTO Keeping Warm Colors</string>
    <string name="pref_cat_art_filter_bracketing">Art Filter Bracketing</string>
    <string name="bkt_pict_popart">Pop Art</string>
    <string name="bkt_pict_fantasic_focus">Soft Focus</string>
    <string name="bkt_pict_daydream">Pale &amp; Light Color</string>
    <string name="bkt_pict_light_tone">Light Tone</string>
    <string name="bkt_pict_rough_monochrome">Grainy Film</string>
    <string name="bkt_pict_toy_photo">Pin Hole</string>
    <string name="bkt_pict_miniature">Diorama</string>
    <string name="bkt_pict_cross_process">Cross Process</string>
    <string name="bkt_pict_gentle_sepia">Gentle Sepia</string>
    <string name="bkt_pict_dramatic_tone">Dramatic Tone</string>
    <string name="bkt_pict_ligne_clair">Key Line</string>
    <string name="bkt_pict_pastel">Watercolor</string>
    <string name="bkt_pict_vintage">Vintage</string>
    <string name="bkt_pict_partcolor">Partial Color</string>
    <string name="dialog_start_wait_title">Please Wait</string>
    <string name="dialog_start_wait_message">Prepairing...</string>
    <string name="shutter_control_record_failed">Record failed</string>
    <string name="shutter_control_take_failed">Take failed</string>
    <string name="shutter_control_af_failed">AF failed</string>
    <string name="warn_high_temperature">TEMP</string>
    <string name="warn_exposure">WARN</string>
    <string name="dialog_download_title">Get Image</string>
    <string name="dialog_download_movie_title">Get Movie</string>
    <string name="dialog_download_message">File Name:</string>
    <string name="download_control_download_failed">Download failed</string>
    <string name="download_control_save_failed">Save failed</string>
    <string name="download_control_save_success">Saved</string>
</resources>
