<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/pref_cat_camera">

        <ListPreference
            android:title="@string/pref_live_view_quality"
            android:entryValues="@array/live_view_quality_value"
            android:entries="@array/live_view_quality"
            android:key="live_view_quality"
            android:defaultValue="QVGA"/>

        <CheckBoxPreference
            android:key="touch_shutter"
            android:title="@string/pref_touch_shutter" />

        <CheckBoxPreference
            android:key="show_preview"
            android:title="@string/pref_show_preview" />

        <ListPreference
            android:title="@string/pref_shooting_velocity"
            android:entryValues="@array/shooting_velocity_value"
            android:entries="@array/shooting_velocity"
            android:key="shooting_velocity"
            android:defaultValue="10"/>

        <ListPreference
            android:title="@string/pref_camera_sound_volume"
            android:entryValues="@array/sound_volume_level_value"
            android:entries="@array/sound_volume_level"
            android:key="sound_volume_level"
            android:defaultValue="OFF"/>

        <ListPreference
            android:title="@string/pref_image_size"
            android:entryValues="@array/image_size_value"
            android:entries="@array/image_size"
            android:key="image_size"
            android:defaultValue="4608x3456"/>

        <ListPreference
            android:title="@string/pref_compressibility_ratio"
            android:entryValues="@array/compressibility_ratio_value"
            android:entries="@array/compressibility_ratio"
            android:key="compressibility_ratio"
            android:defaultValue="CMP_2_7"/>

        <CheckBoxPreference
            android:key="raw"
            android:title="@string/pref_take_raw" />

        <PreferenceScreen
            android:key="power_off"
            android:title="@string/pref_power_off" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_feature">

        <CheckBoxPreference
            android:key="full_time_af"
            android:title="@string/pref_full_time_af" />

        <ListPreference
            android:title="@string/pref_af_face_scan"
            android:entryValues="@array/face_scan_value"
            android:entries="@array/face_scan"
            android:key="face_scan"
            android:defaultValue="FACE_SCAN_OFF"/>

        <CheckBoxPreference
            android:key="auto_wb_denkyu_colored_leaving"
            android:title="@string/pref_wb_denkyu_colored_leaving" />

        <ListPreference
            android:title="@string/pref_recently_art_filter"
            android:entryValues="@array/recently_art_filter_value"
            android:entries="@array/recently_art_filter"
            android:key="recently_art_filter"
            android:defaultValue="POPART"/>
<!--
        <PreferenceScreen
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:title="@string/pref_art_filter">


            <PreferenceCategory
                android:title="@string/pref_cat_art_filter_bracketing">

                <CheckBoxPreference
                    android:key="bracket_pict_popart"
                    android:title="@string/bkt_pict_popart" />
                <CheckBoxPreference
                    android:key="bracket_pict_fantasic_focus"
                    android:title="@string/bkt_pict_fantasic_focus" />
                <CheckBoxPreference
                    android:key="bracket_pict_daydream"
                    android:title="@string/bkt_pict_daydream" />
                <CheckBoxPreference
                    android:key="bracket_pict_light_tone"
                    android:title="@string/bkt_pict_light_tone" />
                <CheckBoxPreference
                    android:key="bracket_pict_rough_monochrome"
                    android:title="@string/bkt_pict_rough_monochrome" />
                <CheckBoxPreference
                    android:key="bracket_pict_toy_photo"
                    android:title="@string/bkt_pict_toy_photo" />
                <CheckBoxPreference
                    android:key="bracket_pict_miniature"
                    android:title="@string/bkt_pict_miniature" />
                <CheckBoxPreference
                    android:key="bracket_pict_cross_process"
                    android:title="@string/bkt_pict_cross_process" />
                <CheckBoxPreference
                    android:key="bracket_pict_gentle_sepia"
                    android:title="@string/bkt_pict_gentle_sepia" />
                <CheckBoxPreference
                    android:key="bracket_pict_dramatic_tone"
                    android:title="@string/bkt_pict_dramatic_tone" />
                <CheckBoxPreference
                    android:key="bracket_pict_ligne_clair"
                    android:title="@string/bkt_pict_ligne_clair" />
                <CheckBoxPreference
                    android:key="bracket_pict_pastel"
                    android:title="@string/bkt_pict_pastel" />
                <CheckBoxPreference
                    android:key="bracket_pict_vintage"
                    android:title="@string/bkt_pict_vintage" />
                <CheckBoxPreference
                    android:key="bracket_pict_partcolor"
                    android:title="@string/bkt_pict_partcolor" />
            </PreferenceCategory>
        </PreferenceScreen>

        <PreferenceScreen
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:title="@string/pref_picture_mode">

        </PreferenceScreen>

-->
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_info">

        <PreferenceScreen
            android:key="focal_length"
            android:title="@string/pref_focal_length"
            android:selectable="false" />

        <PreferenceScreen
            android:key="lens_status"
            android:title="@string/pref_lens_status"
            android:selectable="false" />

        <PreferenceScreen
            android:key="media_status"
            android:title="@string/pref_media_status"
            android:selectable="false" />

        <PreferenceScreen
            android:key="camera_version"
            android:title="@string/pref_camera_version"
            android:selectable="false" />

        <PreferenceScreen
        android:key="camerakit_version"
        android:title="@string/pref_camerakit_version"
        android:selectable="false" />
    </PreferenceCategory>
</PreferenceScreen>
